Finalise function for drawing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
 
     <div class="header">
-
+        <h1>Etch-a-Sketch</h1>
+        <p class="subtitle">Following the Odin's Project assignment n. X</p>
     </div>
 
     <div class="container">
