--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         <p class="subtitle">Following the Odin's Project assignment n. X</p>
     </div>
 
+    <div class="controls">
+        <input type="number" class="number"> <button class="create">Create</button>
+        <button class="reset">Reset</button><br>
+    </div>
+
     <div class="container">
     </div>
     
