Start writing function for disabling choosen color button and enabling choosable ones.

--- a/index.html
+++ b/index.html
@@ -8,19 +8,33 @@
     <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-
+    
     <div class="header">
         <h1>Etch-a-Sketch</h1>
         <p class="subtitle">Following the Odin's Project assignment n. X</p>
     </div>
 
+<div class="lower">
     <div class="controls">
+
+        <div class="colors">
+            <button class="color" id="black">Black</button>
+            <button class="color inactive" id="random">Random</button>
+            <button class="color inactive" id="darken">Darken</button>
+        </div>
+
+        <div class="createReset">
         <input type="number" class="number"> <button class="create">Create</button>
         <button class="reset">Reset</button><br>
     </div>
+    </div>
 
+<div class="frame">
     <div class="container">
     </div>
+</div>
+
+</div>
     
 </body>
 </html>
