--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-Sketch!</title>
-    <script src="./script.js" defer></script>
+    <script src="./script2.js" defer></script>
     <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
@@ -18,9 +18,9 @@
     <div class="controls">
 
         <div class="colors">
-            <button class="color" id="black">Black</button>
-            <button class="color inactive" id="random">Random</button>
-            <button class="color inactive" id="darken">Darken</button>
+            <button class="color selected" id="black">Black</button>
+            <button class="color unselected" id="random">Random</button>
+            <button class="color unselected" id="darken">Darken</button>
         </div>
 
         <div class="createReset">
