Fix _blank link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <div class="header">
         <h1>Etch-a-Sketch</h1>
-        <p class="subtitle">Following the Odin's Project assignment <a class="odin" href="https://www.theodinproject.com/lessons/foundations-etch-a-sketch#project-solution">"Etch-a-Sketch" <img src="./newwindow.svg" height="13" width="13"></a></p>
+        <p class="subtitle">Following the Odin's Project assignment <a class="odin" href="https://www.theodinproject.com/lessons/foundations-etch-a-sketch#project-solution">"Etch-a-Sketch"</a> <a class="odin" href="https://www.theodinproject.com/lessons/foundations-etch-a-sketch#project-solution" target="_blank"><img src="./newwindow.svg" height="13" width="13"></a></p>
     </div>
 
 <div class="lower">
