--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 </div>
 
-<div class="footer">2024, definitely not &copy; by <a href="https://github.com/niccostantini">the_niccolo</a></div>
+<div class="footer">2024, definitely not &copy; by <a href="https://github.com/niccostantini">niccostantini</a></div>
 
 </body>
 </html>
